--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   // Konfigurasi GitHub (GANTI DENGAN DATA ANDA)
   const GITHUB_USERNAME = "Zhitam";
   const GITHUB_REPO = "My-Personal-anime-list";
-  const GITHUB_TOKEN = "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"; // Dapatkan dari GitHub Settings > Developer Settings > Tokens
+  const token = prompt("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:"); // Dapatkan dari GitHub Settings > Developer Settings > Tokens
 
   // Muat anime dan mode saat halaman dibuka
   document.addEventListener("DOMContentLoaded", function() {
